--- a/ASP.NET Core MVC Identity.NET6/Views/Account/Register.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Account/Register.cshtml
@@ -1,11 +1,11 @@
 ﻿@using ASP.NET_Core_MVC_Identity.NET6.ViewModels
 @model RegisterViewModel
 
-<h1 class="text-info">Register</h1>
+<div asp-validation-summary="All" class="text-danger"></div>
+<h1>Register</h1>
 <form asp-controller="Account" asp-action="Register" method="post" role="form">
     <h4>Create a new account</h4>
     <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email" class="col-md-2"></label>
         <div class="col-md-10">
@@ -35,7 +35,8 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="offset-md-2 col-md-10">
+        <br/>
+        <div>
             <button type="submit" class="btn btn-success">Register</button>
         </div>
     </div>
