--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -1,42 +1,5 @@
-﻿
-<style>
-    body {
-        margin-left: 10px;
-        font-size: large;
-    }
-
-    .title {
-        text-align: center;
-        color: white;
-    }
-
-    /* width */
-    ::-webkit-scrollbar {
-        width: 20px;
-    }
-
-    /* Track */
-    ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px grey;
-        border-radius: 10px;
-    }
-
-    /* Handle */
-    ::-webkit-scrollbar-thumb {
-        background: rgb(20, 20, 20);
-        border-radius: 10px;
-    }
-
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: rgb(3, 3, 51);
-        }
-</style>
-
-
-
-<div class="title">
-    <h1>Three.js Demo</h1>
+﻿<div class="title">
+    <p class="display-2 text-center">Three.js Demo</p>
 </div>
 
 <script src="~/Three_js/three.min.js"></script>
@@ -46,12 +9,12 @@
 
     let width = window.innerWidth;
     let height = window.innerHeight;
-    const camera = new THREE.PerspectiveCamera(75, width / height, 0.1, 1000 );
+    const camera = new THREE.PerspectiveCamera(125, width / height, 0.1, 1000);
 
     const size = 100;
     const divisions = 50;
     const gridHelper = new THREE.GridHelper(size, divisions);
-    
+
     const geometry = new THREE.BoxGeometry(1, 1, 1);
     const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
     const cube = new THREE.Mesh(geometry, material);
@@ -69,24 +32,17 @@
         renderer.render(scene, camera);
     }
 
-    window.addEventListener('resize', onWindowResize, false)
-    function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight
-        camera.updateProjectionMatrix()
-        renderer.setSize(window.innerWidth, window.innerHeight)
-        render()
-    }
-
-    for (let i = 0; i <= 10; i++) {
+    for (let i = 0; i < 6; i++) {
         const geometry = new THREE.BoxGeometry(1, 1, 1);
         const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
         const cube = new THREE.Mesh(geometry, material);
-        cube.position.z = -i;
-        cube.position.x = i / i * (i - 1);
-        cube.position.y = i;
 
-        cube.rotation.x += 0.50;
-        cube.rotation.z += 0.50;
+        cube.position.z = -i * i / 4;
+        cube.position.x = i * i;
+        cube.position.y = i * i;
+
+        cube.rotation.x += i;
+        cube.rotation.z += i;
 
         scene.add(cube);
     }
@@ -101,14 +57,24 @@
     scene.add(gridHelper);
 
     renderer.render(scene, camera)
-    animate();
-    
-    /// SPHERE
-    //const geo1 = new THREE.SphereGeometry(.5, 10, 10);
-    //const mat1 = new THREE.MeshBasicMaterial({ color: 0xccc });
-    //const sphere = new THREE.Mesh(geo1, mat1);
-    //sphere.position.x = 1;
-    //scene.add(sphere);
+
+    window.addEventListener('resize', onWindowResize, false)
+    function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight
+        camera.updateProjectionMatrix()
+        renderer.setSize(window.innerWidth, window.innerHeight)
+        render()
+    }
+
+
+
+
+        /// SPHERE
+        //const geo1 = new THREE.SphereGeometry(.5, 10, 10);
+        //const mat1 = new THREE.MeshBasicMaterial({ color: 0xccc });
+        //const sphere = new THREE.Mesh(geo1, mat1);
+        //sphere.position.x = 1;
+        //scene.add(sphere);
 </script>
 
 
