--- a/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
+++ b/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
@@ -1,12 +1,8 @@
-html {
+html, body {
     font-size: 14px;
     background-color: #181a1b;
     color: white;
     scrollbar-color: rgb(128, 128, 128);
-}
-
-body {
-    background-color: #181a1b;
 }
 
 .grid-container {
@@ -21,3 +17,26 @@ body {
     margin: 10px;
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background: #555;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(128, 128, 128);
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
+::-webkit-scrollbar-corner {
+    border-radius: 25px;
+}
+
+a, .nav-link {
+    color: rgba(255, 255, 255, 0.8);
+}
