--- a/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a asp-controller="Homg" asp-action="Index"><img src="~/imgs/mvc-logo.png" /></a>
+                <a asp-controller="Home" asp-action="Index"><img src="~/imgs/mvc-logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -72,14 +72,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" title="Giphy API Demo" asp-controller="Giphy" asp-action="Index"><i class="fa-solid fa-image"></i> Giphy API</a>
                             </li>
-                            <li class="nav-item me-auto">
+                            <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="OpenWeatherMap" asp-action="Index"><i class="fas fa-cloud-sun-rain"></i> Weather API</a>
                             </li>
-                            <li>
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+                            <li class="nav-item me-auto">
+                                <a class="nav-link" asp-area="" asp-controller="ThreeJS" asp-action="Index">Three <i class="fa-brands fa-js"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register"> <i class="fa-solid fa-user-plus"></i> Register</a>
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login <i class="fa-solid fa-right-to-bracket"></i></a>
+                            </li>
+                            <li>
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register <i class="fa-solid fa-user-plus"></i></a>
                             </li>
                         }
                     </ul>
