--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -1,1 +1,25 @@
-﻿<h1>Home</h1>
+﻿<div class="container text-center mb-5">
+    <h1 class="display-1 m-5">ASP.NET MVC Pattern</h1>
+    <p class="display-6">A design pattern for achieving a clean separation of concerns</p>
+    <div class="btn btn-primary m-3">
+        <a href="https://learn.microsoft.com/aspnet/core/tutorials/first-mvc-app/?WT.mc_id=dotnet-35129-website" target="_blank">Get Started</a>
+    </div>
+    <p>Supported on Windows, Linux, and macOS</p>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <img src="https://dotnet.microsoft.com/static/images/illustrations/swimlane-model-view-controller.svg?v=CzUv-GDiU6YsHcGrR3M_-rs-39bc2dpjl22uAT5Br2Q" />
+        </div>
+        <div class="col-6">
+            <h2>Model View Controller (MVC)</h2>
+            <p>MVC is a design pattern used to decouple user-interface (view), data (model), and application logic (controller).
+                This pattern helps to achieve separation of concerns.</p>
+            <p>Using the MVC pattern for websites, requests are routed to a Controller that is responsible for working with the Model to perform actions and/or retrieve data.
+                The Controller chooses the View to display and provides it with the Model. The View renders the final page, based on the data in the Model.</p>
+            <p>
+                <a href="https://learn.microsoft.com/aspnet/core/mvc/overview?WT.mc_id=dotnet-35129-website" target="_blank">Learn more about the MVC pattern</a>
+            </p>
+        </div>
+    </div>
+</div>
