--- a/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            <li class="nav-item ms-3">
+                            <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
                             </li>
                             <li class="nav-item">
@@ -50,7 +50,7 @@
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-success" href="#"><i class="fa-solid fa-user"></i> &nbsp; @UserManager.GetUserName(User)</a>
+                                <a class="nav-link text-success" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-user"></i> &nbsp; @UserManager.GetUserName(User)</a>
                             </li>
                             <li class="nav-item">
                                 <form id="logoutForm" method="post" class="form-inline" asp-controller="Account" asp-action="LogOff">
