--- a/ASP.NET Core MVC Identity.NET6/Views/User/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/User/Index.cshtml
@@ -5,19 +5,16 @@
         <h2 class="text-primary">User List </h2>
     </div>
 </div>
-<div class="p-4 border rounded">
+<div class="p-4 border border-secondary rounded">
     @if (Model.Count() > 0)
     {
-        <table class="table table-striped border">
-            <tr class="table-secondary">
+        <table class="table table-dark border border-secondary">
+            <tr>
                 <th>
                     Email
                 </th>
                 <th>
-                    Nickname
-                </th>
-                <th>
-                    Roles
+                    Role
                 </th>
                 <th></th>
             </tr>
@@ -30,21 +27,19 @@
                     <td>
                         @item.Role
                     </td>
-                    <td>
-                        <div class="text-center">
-                            <form asp-action="Delete" asp-route-userId="@item.Id">
-                                <a asp-action="Edit" asp-route-userId="@item.Id" class="btn btn-info text-white">
-                                    Edit
-                                </a>
+                    <td class="text-center">
+                        <form asp-action="Delete" asp-route-userId="@item.Id">
+                            <a asp-action="Edit" asp-route-userId="@item.Id" class="btn btn-info text-white">
+                                Edit
+                            </a>
 
-                                <a asp-action="ManageClaims" asp-route-userId="@item.Id" class="btn btn-primary text-white">Claims</a>
+                            <a asp-action="ManageClaims" asp-route-userId="@item.Id" class="btn btn-primary text-white">Claims</a>
 
-                                <button type="submit" onclick="return confirm('Are you sure you want to delete this?')"
-                                class="btn btn-danger">
-                                    Delete
-                                </button>
-                            </form>
-                        </div>
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete this?')"
+                            class="btn btn-danger">
+                                Delete
+                            </button>
+                        </form>
                     </td>
                 </tr>
             }
