--- a/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/ASP.NET_Core_MVC_Identity.NET6.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/7160ed62e4.js" crossorigin="anonymous"></script>
 </head>
-<body class="container-fluid vh-100">
+<body class="container-fluid h-100">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
@@ -70,19 +70,19 @@
                                 <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Index"><i class="fas fa-shopping-bag"></i> Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" title="Giphy API Demo" asp-controller="Giphy" asp-action="Index"><i class="fa-solid fa-image"></i> Giphy API</a>
+                                <a class="nav-link" asp-area="" title="Giphy API Demo" asp-controller="Giphy" asp-action="Index"><i class="fa-solid fa-image"></i> Giphy</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="OpenWeatherMap" asp-action="Index"><i class="fas fa-cloud-sun-rain"></i> Weather API</a>
+                                <a class="nav-link" asp-area="" asp-controller="OpenWeatherMap" asp-action="Index"><i class="fas fa-cloud-sun-rain"></i> Weather</a>
                             </li>
                             <li class="nav-item me-auto">
-                                <a class="nav-link" asp-area="" asp-controller="ThreeJS" asp-action="Index">Three <i class="fa-brands fa-js"></i></a>
+                                <a class="nav-link" asp-area="" asp-controller="ThreeJS" asp-action="Index"><i class="fa-brands fa-js"></i> Three</a>
                             </li>
                             <li>
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login <i class="fa-solid fa-right-to-bracket"></i></a>
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
                             </li>
                             <li>
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register <i class="fa-solid fa-user-plus"></i></a>
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register"><i class="fa-solid fa-user-plus"></i> Register</a>
                             </li>
                         }
                     </ul>
