--- a/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
+++ b/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
@@ -3,6 +3,7 @@ html, body {
     background-color: #181a1b;
     color: white;
     scrollbar-color: rgb(128, 128, 128);
+    margin-bottom: 30px;
 }
 a, .nav-link {
     color: rgba(255, 255, 255, 0.8);
@@ -46,5 +47,5 @@ a, .nav-link {
     background: rgb(128, 128, 128);
 }
     ::-webkit-scrollbar-thumb:hover {
-        background: #05133c;
+        background: #0e0e10;
     }
