--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
@@ -10,6 +10,22 @@
     <p>5 Day Forecast</p>
 </div>
 
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/ClearNightV3.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/MostlyClearNight.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/PartlyCloudyNightV2.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/MostlyCloudyNightV2.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/RainShowersNightV2.svg" />
+<br />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/CloudyV3.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/LightRainV3.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/HeavyDrizzle.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/ModerateRainV2.svg" />
+<br />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/SunnyDayV3.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/MostlySunnyDay.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/PartlyCloudyDayV3.svg" />
+<img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/MostlyCloudyDayV2.svg" />
+
 <div class="container-fluid mt-5 border border-secondary border-4">
     <h1>Day @(day++)</h1>
     <div class="row row-cols-3">
