finished giphy styling

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <h1 class="display-1 m-5">ASP.NET MVC Pattern</h1>
     <p class="display-6">A design pattern for achieving a clean separation of concerns</p>    
 </div>
-<div class="container">
+<div class="container vh-100">
     <div class="row">
         <div class="col-6">
             <img src="https://dotnet.microsoft.com/static/images/illustrations/swimlane-model-view-controller.svg?v=CzUv-GDiU6YsHcGrR3M_-rs-39bc2dpjl22uAT5Br2Q" />
