--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Privacy.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Privacy.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="container vh-100">
+    <h1>@ViewData["Title"]</h1>
+    <p>Use this page to detail your site's privacy policy.</p>
+</div>
+
