--- a/ASP.NET Core MVC Identity.NET6/Views/Giphy/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Giphy/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ASP.NET_Core_Identity_Demo.GiphyAPI
+@using System.Linq
 
 @model GiphyAPI_Root
 
@@ -9,17 +10,32 @@
     }
 </style>
 
-<div class="main">
+
+@{
+    int index = 0;
+}
+
+<div class="container">
     <h1 class="display-4 center">Giphy API Demo: Cat memes</h1>
-    <div class="grid-container_2columns">
-        @foreach (var item in Model.data)
-        {
-            <div class="grid-item">
-                <img src="@item.Images.fixed_height.url" />
+    @for(int i = 0; i < Model.data.Count; i++)
+    {        
+        <div class="row">
+            <div class="col m-2">
+                <img src="@Model.data[index].Images.fixed_height.url" />
             </div>
+            <div class="col m-2">
+                <img src="@Model.data[++index].Images.fixed_height.url" />
+            </div>   
+            <div class="col m-2">
+                <img src="@Model.data[++index].Images.fixed_height.url" />
+            </div> 
+        </div>
+
+        index++;
+
+        @if (index == Model.data.Count - 1)
+        {
+            break;
         }
-    </div>
-
-    <br />
+    }
 </div>
-
