styling the get weather form and updating the results view

--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
@@ -27,7 +27,9 @@
 <img src="https://assets.msn.com/weathermapdata/1/static/svg/72/v6/card/MostlyCloudyDayV2.svg" />
 
 <div class="container-fluid mt-5 border border-secondary border-4">
-    <h1>Day @(day++)</h1>
+    <div class="my-3">
+        <h1>Day @(day++)</h1>
+    </div>
     <div class="row row-cols-3">
         @for (int i = 0; i < 8; i++)
         {
@@ -39,7 +41,7 @@
                         <p class="p-1">Temperature: @Model.List[i].Main.Temp</p>
                         <p class="p-1">Feels Like: @Model.List[i].Main.Feels_like</p>
                         <p class="p-1">Humidity: @Model.List[i].Main.Humidity%</p>
-                        <p class="p-1">Precipitation: @Model.List[i].Pop %</p>
+                        <p class="p-1">Precipitation: @Model.List[i].Pop%</p>
                     </div>
                 </div>
             </div>
@@ -48,7 +50,9 @@
 </div>
 
 <div class="container-fluid mt-5 border border-secondary border-4">
-    <h1>Day @(day++)</h1>
+    <div class="my-3">
+        <h1>Day @(day++)</h1>
+    </div>
     <div class="row row-cols-3">
         @for (int i = 8; i < 16; i++)
         {
@@ -69,7 +73,9 @@
 </div>
 
 <div class="container-fluid mt-5 border border-secondary border-4">
-    <h1>Day @(day++)</h1>
+    <div class="my-3">
+        <h1>Day @(day++)</h1>
+    </div>
     <div class="row row-cols-3">
         @for (int i = 16; i < 24; i++)
         {
@@ -90,7 +96,9 @@
 </div>
 
 <div class="container-fluid mt-5 border border-secondary border-4">
-    <h1>Day @(day++)</h1>
+    <div class="my-3">
+        <h1>Day @(day++)</h1>
+    </div>
     <div class="row row-cols-3">
         @for (int i = 24; i < 32; i++)
         {
@@ -112,7 +120,9 @@
 
 
 <div class="container-fluid mt-5 border border-secondary border-4">
-    <h1>Day @(day++)</h1>
+    <div class="my-3">
+        <h1>Day @(day++)</h1>
+    </div>
     <div class="row row-cols-3">
         @for (int i = 32; i < 40; i++)
         {
