--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/Index.cshtml
@@ -3,24 +3,26 @@
 
 <div class="container vh-100 mt-3">
     <h1 class="display-2 text-white text-center">OpenWeatherMap API Demo</h1>
-    <div class="border border-secondary p-2 mt-5">
-        <h2>Getting the weather by City Name <br />(5 Day Forecast)</h2>
-        @using (Html.BeginForm("GetWeather", "OpenWeatherMap", FormMethod.Post))
-        {
-            <table>
-                <tr>
-                    <td>Enter City Name: </td>
-                    <td>@Html.TextBoxFor(weather => weather.City.Name)</td>
-                </tr>
-                <tr>
-                    <td>Enter the API Key: </td>
-                    <td>@Html.TextBoxFor(weather => weather.API_Key)</td>
-                </tr>
-                <tr>
-                    <td><input class="btn btn-primary" type="submit"></input></td>
-                </tr>
-            </table>
-        }
+    <div class="col-6 p-2 mt-5">
+        
+        <form asp-action="GetWeather" asp-controller="OpenWeatherMap" method="post">
+            <h2 class="display-5">5 Day Forecast</h2>
+            <div class="col-8">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <label asp-for="City.Name">Name of City</label>
+                <input asp-for="City.Name" class="form-control" />
+            </div>
+            <div class="col-8">
+                <label asp-for="API_Key">API Key</label>
+                <input asp-for="API_Key" class="form-control" />
+            </div>
+            <br />
+            <div class="form-group">
+                <div class="col-8">
+                    <button type="submit" class="btn btn-success form-control">Submit</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 
