--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/Index.cshtml
@@ -1,25 +1,23 @@
 ﻿@using ASP.NET_Core_Identity_Demo.Models.Weather
 @model Root
 
-<div class="container vh-100 mt-3">
+<div class="vh-100 mt-3">
     <h1 class="display-2 text-white text-center">OpenWeatherMap API Demo</h1>
-    <div class="col-6 p-2 mt-5">
-        
+    <div class="row p-2 mt-5">
         <form asp-action="GetWeather" asp-controller="OpenWeatherMap" method="post">
-            <h2 class="display-5">5 Day Forecast</h2>
-            <div class="col-8">
+            <h2 class="display-4">5 Day Forecast</h2>
+            <div class="col my-2 fs-4">
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <label asp-for="City.Name">Name of City</label>
-                <input asp-for="City.Name" class="form-control" />
+                <label asp-for="City.Name">City Name: </label>
+                <input asp-for="City.Name" class="dark-form" />
             </div>
-            <div class="col-8">
-                <label asp-for="API_Key">API Key</label>
-                <input asp-for="API_Key" class="form-control" />
-            </div>
-            <br />
-            <div class="form-group">
-                <div class="col-8">
-                    <button type="submit" class="btn btn-success form-control">Submit</button>
+            <div class="col my-2 fs-4">
+                <label asp-for="API_Key">API Key: </label>
+                <input asp-for="API_Key" class="dark-form" />
+                <br />
+                <br />
+                <div class="d-grid w-25">
+                    <button class="btn btn-success" type="submit">Submit</button>
                 </div>
             </div>
         </form>
