--- a/ASP.NET Core MVC Identity.NET6/Views/Product/InsertProduct.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Product/InsertProduct.cshtml
@@ -1,6 +1,14 @@
 ﻿@using ASP.NET_Core_Identity_Demo.Models
 @model Product
 
+<style>
+    .dark-form {
+        color: rgb(209, 205, 199);
+        background-color: rgb(24, 26, 27);
+        border-color: rgb(60, 65, 68);
+    }
+</style>
+
 <div>
     <br />
     <br />
@@ -8,27 +16,27 @@
 
 <div class="container mucho-margin-top">
     <h1 class="display-3">Create a New Product</h1>
-    @using (Html.BeginForm("InsertProductToDatabase", "Product", "Post"))
-    {
+    <form asp-action="InsertProductToDatabase" asp-controller="Product" method="post">
         <input asp-for="ProductID" type="hidden" value="" />
+        <label asp-for="Name" class="form-label my-2">Name</label>
+        <input type="text" name="Name" class="form-control dark-form" value="" />
 
-        <label asp-for="Name" class="control-label">Name</label>
-        <input type="text" name="Name" class="form-control" value="" />
+        <label asp-for="Price" class="form-label my-2">Price</label>
+        <input type="number" step="0.01" name="Price" class="form-control dark-form" />
 
-        <label asp-for="Price" class="control-label">Price</label>
-        <input type="number" step="0.01" name="Price" class="form-control" />
-
-        <div class="form-group">
+        <div class="form-group my-2">
             <label for="">Select a Category</label>
-            <select class="form-control" name="CategoryID" value="">
+            <select class="form-control dark-form" name="CategoryID" value="">
                 @foreach (var cat in Model.Categories)
                 {
-                    <option value="@cat.CategoryID">@cat.CategoryID @cat.Name</option>
+                    <option value="@cat.CategoryID" class="dark-form">@cat.CategoryID @cat.Name</option>
                 }
             </select>
         </div>
+
+        <br />
         <input type="submit" value="Create Product" class="btn btn-primary" />
-    }
+    </form>
 </div>
 
 
