--- a/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div>
         @RenderBody()
     </div>
 
